# TinyEngine

./: .gitignore  BuildVSProject.bat  CMakeLists.txt
App/: CMakeLists.txt  main.cpp
Component/: CMakeLists.txt  ITick.h
Component/Allocator/: Allocator.hpp  CMakeLists.txt
Component/GLContext/: CMakeLists.txt  GLContext.cpp  GLContext.h
Component/GameTimer/: GameTimer.cpp  GameTimer.h
Component/InputSystem/: InputSystemTest.cc
Component/Renderer/: CMakeLists.txt  IAllocator.h  IBindable.h  IConstantBuffer.h  IDevice.h  IDrawable.h  IFrameFence.h  IFrameQueue.h  IFrameResource.h  IGraphPass.h  IObject.h  IPassResource.h
Component/Renderer/dxrg/: D3D12Common.h  D3D12Device.cpp  D3D12Device.h  D3D12Fence.cpp  D3D12Fence.h  D3D12FrameQueue.cpp  D3D12FrameQueue.h  D3D12FrameResource.cpp  D3D12FrameResource.h  DescriptorAllocator.cpp  DescriptorAllocator.h  LinearUploadBuffer.cpp  LinearUploadBuffer.h  UploadBuffer.cpp  UploadBuffer.h
Component/Renderer/interface/: IAllocator.h  IBindable.h  IConstantBuffer.h  IDevice.h  IDrawable.h  IFrameFence.h  IFrameQueue.h  IFrameResource.h  IGraphicsPass.h  IObject.h  IPassResource.h  IRenderable.h  InterfaceCommon.h  RendererAllocator.h
Function/: CMakeLists.txt
Function/Function/: CMakeLists.txt  ITick.h
Function/Function/BaseApp/: BaseApp.cpp  BaseApp.h
Function/Function/GameTimer/: GameTimer.cpp  GameTimer.h
Function/Function/InputSystem/: CMakeLists.txt  InputSystem.cpp  InputSystem.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  window.cpp  window.h
Function/Math/: CMakeLists.txt
Function/ShaderParse/: CMakeLists.txt  sysy.l  xmake.lua
Function/ShaderParse/ParseCode/: sysy.y
Libraies/: CMakeLists.txt
Libraies/glad/: CMakeLists.txt  glad.h
Libraies/glad/src/: glad.c
Libraies/glm/glm/: CMakeLists.txt
Libraies/glm/glm/gtc/: quaternion.inl
Renderer/: CMakeLists.txt
Renderer/Common/: Common.h  D3DException.cpp  D3DException.h
Renderer/RenderGraph/: CMakeLists.txt
Renderer/RenderGraph/Bindable/: GraphicsPSOBindable.cpp
Renderer/dx12lib/: CMakeLists.txt  dx12libStd.h
Renderer/dx12lib/Tool/: DDSTextureLoader.cpp
